@@ -2,6 +2,6 @@
 
 Congratulations, you've changed the locale to <jwc id="insertLocaleName"/>.
 
-<p>You may <jwc id="home">select another</jwc>.
+<p><jwc id="home"><jwc id="chooseAgainImage"/></jwc>
 
 </jwc>
