@@ -33,5 +33,21 @@
 				</binding>
 			</bindings>
 		</component>
+		<component>
+			<id>changeButton</id>
+			<type>ImageButton</type>
+			<bindings>
+				<binding>
+					<name>image</name>
+					<property-path>assets.change-button</property-path>
+				</binding>
+			</bindings>
+		</component>
 	</components>
+	<assets>
+		<private-asset>
+			<name>change-button</name>
+			<resource-path>/tutorial/locale/Change.gif</resource-path>
+		</private-asset>
+	</assets>
 </specification>
