@@ -7,8 +7,8 @@ dynamiquement le locale pour l'application courante.
 Choisissez un nouveau locale:
 
 <jwc id="form">
-<jwc id="inputLocale"/>
-<input type=submit value="Changement!">
+	<jwc id="inputLocale"/>
+	<jwc id="changeButton"/>
 </jwc>
 
 </jwc>
